--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle fw-bold text-black" href="#" id="navbargiochi" role="button" data-bs-toggle="giochi" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle fw-bold" href="#" id="navbargiochi" role="button" data-bs-toggle="giochi" aria-expanded="false">
                           Giochi
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbargiochi">
@@ -54,7 +54,7 @@
                         </ul>
                       </li>
                       <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle fw-bold text-black" href="#" id="navbarhardware" role="button" data-bs-toggle="hardware" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle fw-bold" href="#" id="navbarhardware" role="button" data-bs-toggle="hardware" aria-expanded="false">
                           Hardware
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarhardware">
@@ -65,7 +65,7 @@
                         </ul>
                       </li>
                       <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle fw-bold text-black" href="#" id="navbarservizi" role="button" data-bs-toggle="servizi" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle fw-bold" href="#" id="navbarservizi" role="button" data-bs-toggle="servizi" aria-expanded="false">
                           Servizi
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarserivizi">
@@ -76,7 +76,7 @@
                         </ul>
                       </li>
                       <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle fw-bold text-black" href="#" id="navbarnovità" role="button" data-bs-toggle="novità" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle fw-bold" href="#" id="navbarnovità" role="button" data-bs-toggle="novità" aria-expanded="false">
                           Novità
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarnovità">
@@ -87,7 +87,7 @@
                         </ul>
                       </li>
                       <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle fw-bold text-black" href="#" id="navbaracquisti" role="button" data-bs-toggle="acquisti" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle fw-bold" href="#" id="navbaracquisti" role="button" data-bs-toggle="acquisti" aria-expanded="false">
                           Fai Acquisti
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbaracquisti">
@@ -98,7 +98,7 @@
                         </ul>
                       </li>
                       <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle fw-bold text-black" href="#" id="navbarsupporto" role="button" data-bs-toggle="supporto" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle fw-bold" href="#" id="navbarsupporto" role="button" data-bs-toggle="supporto" aria-expanded="false">
                           Supporto
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarsupporto">
@@ -112,7 +112,7 @@
                     <div class="d-flex align-items-center" role="search">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle fw-bold text-black" href="#" id="navbarmyplay" role="button" data-bs-toggle="myplay" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle fw-bold" href="#" id="navbarmyplay" role="button" data-bs-toggle="myplay" aria-expanded="false">
                                   My PlayStation
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarmyplay">
@@ -123,7 +123,9 @@
                                 </ul>
                               </li>
                         </ul>
-                        <button class="btn btn-secondary rounded-pill fw-bold mx-3" type="button">Accedi</button>
+                        <div class="button m-1">
+                            <a href="#" class="btn btn-secondary rounded-pill fw-bold m-1">Accedi</a>
+                        </div>
                         <a class="navbar-brand" href="#">
                             <img src="img/lens.svg" alt="lens-logo" class="w-75">
                         </a>
@@ -137,7 +139,7 @@
     <main>
         <section id="jumbotron">
             <div class="bg-returnal">
-                <div class="container-fluid px-5">
+                <div class="container-fluid p-5">
                     <div class="row align-items-end my-row">
                         <div class="col-12 col-lg-4">
                             <img src="img/returnal-hero-banner-logo.png" alt="returnal-hero-banner-logo" class="w-75 mb-4">
@@ -145,7 +147,9 @@
                             <p class="text-white mb-4 fs-5">
                                 Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su P55.
                             </p>
-                            <button type="button" class="btn btn-danger rounded-pill mb-4">Acquista ora</button>
+                            <div class="button-red d-inline-block m-1">
+                                <a href="#" class="btn btn-danger rounded-pill m-1">Acquista ora</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -155,23 +159,23 @@
         <section id="card-jumbotron">
             <div class="container-fluid px-5">
                 <div class="row py-5 justify-content-between ">
-                    <div class="col-6 col-sm-4 col-lg-2 mb-2 p-2 border border-2 border-primary rounded-4">
+                    <div class="col-6 col-sm-4 col-lg-2 mb-2 p-2 border border-2 border-primary rounded-4 ">
                         <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="" class="w-100 rounded-4">
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2 mb-2 p-2">
-                        <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="" class="w-100 rounded-4">
+                        <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="" class="w-100 rounded-4 cards-jumbotron">
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2 mb-2 p-2">
-                        <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="" class="w-100 rounded-4">
+                        <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="" class="w-100 rounded-4 cards-jumbotron">
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2 mb-2 p-2">
-                        <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="" class="w-100 rounded-4">
+                        <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="" class="w-100 rounded-4 cards-jumbotron">
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2 mb-2 p-2">
-                        <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="" class="w-100 rounded-4">
+                        <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="" class="w-100 rounded-4 cards-jumbotron">
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2 mb-2 p-2">
-                        <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="" class="w-100 rounded-4">
+                        <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="" class="w-100 rounded-4 cards-jumbotron">
                     </div>
                 </div>
             </div>
@@ -188,7 +192,9 @@
                     <div class="col-12 col-md-3 col-lg-4">
                         <h2 class="mb-4">Console PlayStation 5</h2>
                         <span class="text-secondary d-block mb-4">Sperimenta la nuova generazione di incredibili giochi playstation</span>
-                        <button type="button" class="btn btn-primary rounded-pill">Maggiori informazioni</button>
+                        <div class="button-blue d-inline-block m-1">
+                            <a href="#" class="btn btn-primary rounded-pill m-1">Maggiori informazioni</a>
+                        </div>
                     </div>
                     <div class="col-12 col-md-9 col-lg-8">
                         <img src="img/playstation-5-thumb.png" alt="" class="play-5">
@@ -202,28 +208,32 @@
                             <hr class="border-primary opacity-75">
                         </div>
                     </div>
-                    <div class="col-4 col-md opacity-50">
-                        <div class="text-center">
+                    <div class="col-4 col-md">
+                        <div class="text-center cards-play-5">
                             <img src="img/joypad-thumb.png" alt="" class="w-75">
                             <span class="d-none d-md-block">Controller wireless DualSense<sup class="sup-tm">TM</sup></span>
+                            <hr class="border-primary opacity-75">
                         </div>
                     </div>
-                    <div class="col-4 col-md opacity-50">
-                        <div class="text-center">
+                    <div class="col-4 col-md">
+                        <div class="text-center cards-play-5">
                             <img src="img/headset-thumb.png" alt="" class="w-75">
                             <span class="d-none d-md-block">Cuffie wireless con microfono PULSE 3<sup class="sup-tm">TM</sup></span>
+                            <hr class="border-primary opacity-75">
                         </div>
                     </div>
-                    <div class="col-4 col-md opacity-50">
-                        <div class="text-center">
+                    <div class="col-4 col-md">
+                        <div class="text-center cards-play-5">
                             <img src="img/remote-thumb.png" alt="" class="w-75">
                             <span class="d-none d-md-block">Telecomando Media</span>
+                            <hr class="border-primary opacity-75">
                         </div>
                     </div>
-                    <div class="col-4 col-md opacity-50">
-                        <div class="text-center">
+                    <div class="col-4 col-md">
+                        <div class="text-center cards-play-5">
                             <img src="img/camera-thumb.jpg" alt="" class="w-75">
                             <span class="d-none d-md-block">Telecamera HD</span>
+                            <hr class="border-primary opacity-75">
                         </div>
                     </div>
                 </div>
@@ -240,7 +250,9 @@
                             <p class="text-white mb-4 fs-5">
                                 Trova un amico e partite insieme per l'avventurapiù folle delle vostre vile in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genera. 
                             </p>
-                            <button type="button" class="btn btn-danger rounded-pill mb-4">Acquista ora</button>
+                            <div class="button-red d-inline-block m-1">
+                                <a href="#" class="btn btn-danger rounded-pill m-1">Acquista ora</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -320,19 +332,25 @@
                         <img src="img/ps4-slim-homepage-image-block.jpg" alt="" class="w-100">
                         <h2 class="mb-3">PlayStation 4 </h2>
                         <span class="text-secondary fs-5 mb-3 d-block">Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.</span>
-                        <button type="button" class="btn btn-primary rounded-pill">Scopri di più</button>
+                        <div class="button-blue d-inline-block m-1">
+                            <a href="#" class="btn btn-primary rounded-pill m-1">Scopri di più</a>
+                        </div>
                     </div>
                     <div class="col-12 col-md-4 mb-4">
                         <img src="img/double11-202010-tw-psvr.jpg" alt="" class="w-100">
                         <h2 class="mb-3">PlayStation VR Accessori </h2>
                         <span class="text-secondary fs-5 mb-3 d-block">Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.</span>
-                        <button type="button" class="btn btn-primary rounded-pill">Scopri di più</button>
+                        <div class="button-blue d-inline-block m-1">
+                            <a href="#" class="btn btn-primary rounded-pill m-1">Scopri di più</a>
+                        </div>
                     </div>
                     <div class="col-12 col-md-4 mb-4">
                         <img src="img/dualshock-4-listing-thumb.jpg" alt="" class="w-100">
                         <h2 class="mb-3">Accessori</h2>
                         <span class="text-secondary fs-5 mb-3 d-block">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</span>
-                        <button type="button" class="btn btn-primary rounded-pill">Scopri di più</button>
+                        <div class="button-blue d-inline-block m-1">
+                            <a href="#" class="btn btn-primary rounded-pill m-1">Scopri di più</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -347,7 +365,9 @@
                             <p>
                                 Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora. 
                             </p>
-                            <button type="button" class="btn my-btn rounded-pill fw-bold">Scopri di più</button>
+                            <div class="button-grey d-inline-block m-1">
+                                <a href="#" class="btn my-btn fw-bold rounded-pill m-1">Scopri di più</a>
+                            </div>
                         </div>
                         <div class="d-none d-md-block col-md-6">
                             <img src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="" class="w-100">
@@ -386,7 +406,9 @@
                             <p class="text-white">
                                 Ottieni l'accesso immediato a una vastissima raccolta di citai 800 giochi per P54, PS3 e PS2 su P54 o PC Windows, con nuovi titoli aggiunti ogni mese.
                             </p>
-                            <button type="button" class="btn btn-light rounded-pill fw-bold">Esplora PlayStation Now</button>
+                            <div class="button-white d-inline-block m-1">
+                                <a href="#" class="btn btn-light fw-bold rounded-pill m-1">Esplora PlayStation Now</a>
+                            </div>
                         </div>
                         <div class="d-none d-md-block col-md-6">
                             <img src="img/ps-now-april-featured-image-block.png" alt="" class="w-100">
