--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <main>
         <section id="jumbotron">
             <div class="bg-returnal">
-                <div class="container-fluid p-5">
+                <div class="container-xxl p-5">
                     <div class="row align-items-end my-row">
                         <div class="col-12 col-lg-4">
                             <img src="img/returnal-hero-banner-logo.png" alt="returnal-hero-banner-logo" class="w-75 mb-4">
@@ -157,7 +157,7 @@
         </section>
 
         <section id="card-jumbotron">
-            <div class="container-fluid px-5">
+            <div class="container-xxl px-5">
                 <div class="row py-5 justify-content-between ">
                     <div class="col-6 col-sm-4 col-lg-2 mb-2 p-2 border border-2 border-primary rounded-4 ">
                         <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="" class="w-100 rounded-4">
@@ -182,7 +182,7 @@
         </section>
 
         <section id="play5">
-            <div class="container-fluid px-5">
+            <div class="container-xxl px-5">
                 <div class="text-center mb-5">
                     <span class="text-primary">PLAY HAS NO LIMITS</span>
                     <h2 class="mb-4">Ecco la PlayStation 5</h2>
@@ -242,7 +242,7 @@
 
         <section id="jumbotron-middle-page">
             <div class="bg-it-take-two">
-                <div class="container-fluid px-5">
+                <div class="container-xxl px-5">
                     <div class="row py-5">
                         <div class="col-12 col-lg-4">
                             <img src="img/it-takes-two-logo.png" alt="" class="w-75 mb-4">
@@ -261,57 +261,57 @@
 
         <section id="nuove-uscite">
             <div class="bg-dark-grey">
-                <div class="container-fluid p-5">
+                <div class="container-xxl p-5">
                     <h2 class="text-white fw-bold mb-3">Nuove uscite</h2>
                     <h4 class="text-white fw-bold mb-4">Giochi incredibili per PS4 e PS5 disponibili ora</h4>
                     <div class="row">
-                        <div class="col-6 col-sm-4 col-lg-2 mb-5">
+                        <div class="col-6 col-sm-4 col-lg-2 mb-5 games">
                             <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="" class="w-100 rounded-4 mb-2">
                             <span class="d-block text-white fs-5">Tony Hawk's<sup class="sup-tm">TM</sup> Pro Skater<sup class="sup-tm">TM</sup> 1 + 2 </span>
                         </div>
-                        <div class="col-6 col-sm-4 col-lg-2 mb-5">
+                        <div class="col-6 col-sm-4 col-lg-2 mb-5 games">
                             <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="" class="w-100 rounded-4 mb-2">
                             <span class="d-block text-white fs-5">Crash Bandicoot 4: it's About Time</span>
                         </div>
-                        <div class="col-6 col-sm-4 col-lg-2 mb-5">
+                        <div class="col-6 col-sm-4 col-lg-2 mb-5 games">
                             <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="" class="w-100 rounded-4 mb-2">
                             <span class="d-block text-white fs-5">Tony Hawk's<sup class="sup-tm">TM</sup> Pro Skater<sup class="sup-tm">TM</sup> 1 + 2 </span>
                         </div>
-                        <div class="col-6 col-sm-4 col-lg-2 mb-5">
+                        <div class="col-6 col-sm-4 col-lg-2 mb-5 games">
                             <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="" class="w-100 rounded-4 mb-2">
                             <span class="d-block text-white fs-5">Crash Bandicoot 4: it's About Time</span>
                         </div>
-                        <div class="col-6 col-sm-4 col-lg-2 mb-5">
+                        <div class="col-6 col-sm-4 col-lg-2 mb-5 games">
                             <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="" class="w-100 rounded-4 mb-2">
                             <span class="d-block text-white fs-5">Tony Hawk's<sup class="sup-tm">TM</sup> Pro Skater<sup class="sup-tm">TM</sup> 1 + 2 </span>
                         </div>
-                        <div class="col-6 col-sm-4 col-lg-2 mb-5">
+                        <div class="col-6 col-sm-4 col-lg-2 mb-5 games">
                             <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="" class="w-100 rounded-4 mb-2">
                             <span class="d-block text-white fs-5">Crash Bandicoot 4: it's About Time</span>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-6 col-sm-4 col-lg-2 mb-5">
+                        <div class="col-6 col-sm-4 col-lg-2 mb-5 games">
                             <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="" class="w-100 rounded-4 mb-2">
                             <span class="d-block text-white fs-5">Tony Hawk's<sup class="sup-tm">TM</sup> Pro Skater<sup class="sup-tm">TM</sup> 1 + 2 </span>
                         </div>
-                        <div class="col-6 col-sm-4 col-lg-2 mb-5">
+                        <div class="col-6 col-sm-4 col-lg-2 mb-5 games">
                             <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="" class="w-100 rounded-4 mb-2">
                             <span class="d-block text-white fs-5">Crash Bandicoot 4: it's About Time</span>
                         </div>
-                        <div class="col-6 col-sm-4 col-lg-2 mb-5">
+                        <div class="col-6 col-sm-4 col-lg-2 mb-5 games">
                             <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="" class="w-100 rounded-4 mb-2">
                             <span class="d-block text-white fs-5">Tony Hawk's<sup class="sup-tm">TM</sup> Pro Skater<sup class="sup-tm">TM</sup> 1 + 2 </span>
                         </div>
-                        <div class="col-6 col-sm-4 col-lg-2 mb-5">
+                        <div class="col-6 col-sm-4 col-lg-2 mb-5 games">
                             <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="" class="w-100 rounded-4 mb-2">
                             <span class="d-block text-white fs-5">Crash Bandicoot 4: it's About Time</span>
                         </div>
-                        <div class="col-6 col-sm-4 col-lg-2 mb-5">
+                        <div class="col-6 col-sm-4 col-lg-2 mb-5 games">
                             <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="" class="w-100 rounded-4 mb-2">
                             <span class="d-block text-white fs-5">Tony Hawk's<sup class="sup-tm">TM</sup> Pro Skater<sup class="sup-tm">TM</sup> 1 + 2 </span>
                         </div>
-                        <div class="col-6 col-sm-4 col-lg-2 mb-5">
+                        <div class="col-6 col-sm-4 col-lg-2 mb-5 games">
                             <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="" class="w-100 rounded-4 mb-2">
                             <span class="d-block text-white fs-5">Crash Bandicoot 4: it's About Time</span>
                         </div>
@@ -321,7 +321,7 @@
         </section>
 
         <section id="play4">
-            <div class="container-fluid p-5">
+            <div class="container-xxl p-5">
                 <div class="text-center mb-5">
                     <h2 class="mb-4">Esplora PlayStation 4</h2>
                     <span class="text-secondary d-block">Giochi incredibili e intrattenimento senza fine.</span>
@@ -358,7 +358,7 @@
 
         <section id="playstation-plus">
             <div class="bg-grey">
-                <div class="container-fluid px-5">
+                <div class="container-xxl px-5">
                     <div class="row align-items-center">
                         <div class="col-12 py-5 col-md-6 py-md-0">
                             <img src="img/ps-plus-logo.png" alt="" class="w-50 mb-4">
@@ -366,7 +366,7 @@
                                 Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora. 
                             </p>
                             <div class="button-grey d-inline-block m-1">
-                                <a href="#" class="btn my-btn fw-bold rounded-pill m-1">Scopri di più</a>
+                                <a href="#" class="btn my-btn fw-bold rounded-pill m-1">Esplora PlayStation Plus</a>
                             </div>
                         </div>
                         <div class="d-none d-md-block col-md-6">
@@ -378,7 +378,7 @@
         </section>
 
         <section id="sconto">
-            <div class="container-fluid p-5">
+            <div class="container-xxl p-5">
                 <div class="text-center mb-5">
                     <h2 class="mb-4">Nuovi sconti sul PlayStation Store</h2>
                     <span class="text-secondary d-block mb-5">Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto. </span>
@@ -399,7 +399,7 @@
 
         <section id="playstation-now">
             <div class="bg-dark-blue">
-                <div class="container-fluid px-5">
+                <div class="container-xxl px-5">
                     <div class="row align-items-center">
                         <div class="col-12 py-5 col-md-6 py-md-0">
                             <img src="img/ps-now-logo-two-column.png" alt="" class="w-50 mb-4">
@@ -419,22 +419,30 @@
         </section>
 
         <section id="social">
-            <div class="container-fluid p-5">
+            <div class="container-xxl p-5">
                 <div class="text-center">
                     <h2 class="mb-5">Seguici sui social media</h2>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-6 col-sm-3 col-lg-2 mb-4">
-                        <img src="img/twitter.jpg" alt="" class="w-100">
+                        <a href="#">
+                            <img src="img/twitter.jpg" alt="" class="w-100">
+                        </a>
                     </div>
                     <div class="col-6 col-sm-3 col-lg-2 mb-4 ">
-                        <img src="img/facebook.jpg" alt="" class="w-100">
+                        <a href="#">
+                            <img src="img/facebook.jpg" alt="" class="w-100">
+                        </a>
                     </div>
                     <div class="col-6 col-sm-3 col-lg-2  mb-4 ">
-                        <img src="img/instagram.jpg" alt="" class="w-100">
+                        <a href="#">
+                            <img src="img/instagram.jpg" alt="" class="w-100">
+                        </a>
                     </div>
                     <div class="col-6 col-sm-3 col-lg-2  mb-4">
-                        <img src="img/youtube.png" alt="" class="w-100">
+                        <a href="#">
+                            <img src="img/youtube.png" alt="" class="w-100">
+                        </a>
                     </div>
                 </div>
             </div>
@@ -442,7 +450,7 @@
     </main>
     
     <footer>
-        <div class="container-fluid p-5">
+        <div class="container-xxl p-5">
             <div class="row">
                 <div class="col-12 col-lg-6 mb-5">
                     <img src="img/ps-footer.svg" alt="" class="w-25 mb-4 d-block">
@@ -453,29 +461,59 @@
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <ul class="text-white list-unstyled">
-                                <li>Link footer</li>
-                                <li>Link footer</li>
-                                <li>Link footer</li>
-                                <li>Link footer</li>
-                                <li>Link footer</li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
+                                </li>
                             </ul>
                         </div>
                         <div class="col-12 col-md-4">
                             <ul class="text-white list-unstyled">
-                                <li>Link footer</li>
-                                <li>Link footer</li>
-                                <li>Link footer</li>
-                                <li>Link footer</li>
-                                <li>Link footer</li>
-                                <li>Link footer</li>
-                                <li>Link footer</li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
+                                </li>
                             </ul>
                         </div>
                         <div class="col-12 col-md-4">
                             <ul class="text-white list-unstyled">
-                                <li>Link footer</li>
-                                <li>Link footer</li>
-                                <li>Link footer</li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
